kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heritagemk-backend
  namespace: heritagemk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heritagemk-backend
  template:
    metadata:
      labels:
        app: heritagemk-backend
    spec:
      containers:
        - name: backend
          image: eambari/heritagemk-backend:latest
          ports:
            - containerPort: 8080
