kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritagemk-backend
  namespace: heritagemk
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: heritagemk-backend
