kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: heritagemk
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
