kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritagemk-frontend
  namespace: heritagemk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: heritagemk-frontend
