kubernetes/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: heritagemk-all
  namespace: heritagemk
spec:
  stripPrefix:
    prefixes:
      - /api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heritagemk-ingress
  namespace: heritagemk
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: heritagemk-heritagemk-all@kubernetescrd
spec:
  rules:
    - host: heritagemk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heritagemk-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: heritagemk-backend
                port:
                  number: 8080
